--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "minimum-stability": "stable",
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "friendsofphp/php-cs-fixer": "^3.2"
+        "friendsofphp/php-cs-fixer": "^3.2",
+        "phpstan/phpstan": "^1.0"
     }
 }
